# social-automation

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  config.example.yaml  ecosystem.yaml  pyproject.toml  seed.yaml
.github/workflows/: ci.yml
data/: delivery-log.json  posse-manifest.json
docs/adr/: 001-initial-architecture.md  002-integration-patterns.md
docs/pitch/: index.html
kerygma_social/: __init__.py  bluesky.py  circuit_breaker.py  cli.py  config.py  data_export.py  delivery_log.py  discord.py  factory.py  ghost.py  ghost_jwt.py  mastodon.py  posse.py  rate_limiter.py  retry.py  rss_poller.py
src/: __init__.py  discord.py  mastodon.py  posse.py
tests/: test_bluesky.py  test_circuit_breaker.py  test_config.py  test_data_export.py  test_delivery_log.py  test_discord.py  test_factory.py  test_ghost.py  test_mastodon.py  test_posse.py  test_rate_limiter.py  test_retry.py  test_rss_poller.py
tests/fixtures/: sample_config.yaml  sample_feed.xml
