[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "social-automation"
version = "0.3.0"
description = "POSSE distribution, Mastodon integration, and Discord bot automation for cross-platform publishing"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[tool.setuptools.packages.find]
include = ["kerygma_social*"]

[project.scripts]
social-dispatch = "kerygma_social.cli:main"
social-export = "kerygma_social.data_export:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 99
